--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit
-openai
-PyMuPDF
-pandas
-openpyxl
-python-dotenv
-fuzzywuzzy
-python-Levenshtein
-pdfplumber
-SequenceMatcher
+streamlit==1.38.0
+openai==1.51.0
+PyMuPDF==1.24.10
+pandas==2.2.2
+openpyxl==3.1.5
+python-dotenv==1.0.1
+pdfplumber==0.11.4
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.25.1
