--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ requests
 
 # --- OCR + Text Extraction ---
 easyocr
+torch
+torchvision
+opencv-python-headless
 
 # --- Data Processing / Matching ---
 fuzzywuzzy
