--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ requests
 
 # --- Light OCR Option (Fallback) ---
 opencv-python-headless
+pytesseract==0.3.13
+pdf2image==1.17.0
+Pillow==10.4.0
 
 # --- Data Processing / Matching ---
 fuzzywuzzy
