--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ opencv-python-headless
 pytesseract==0.3.13
 pdf2image==1.17.0
 Pillow==10.4.0
+poppler-utils
+tesseract-ocr
+tesseract-ocr-spa
 
 # --- Data Processing / Matching ---
 fuzzywuzzy
