--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,39 @@
-# ==========================================================
-# 🧠 CORE FRAMEWORK
-# ==========================================================
-streamlit==1.39.0
-plotly==5.24.1
-pandas==2.2.3
-numpy==2.1.2
+# --- Streamlit Core ---
+streamlit
+plotly
+pandas
+numpy
 
-# ==========================================================
-# 🤖 OPENAI + ENVIRONMENT
-# ==========================================================
-openai==1.51.0
-python-dotenv==1.0.1
+# --- OpenAI + Environment ---
+openai
+python-dotenv
 
-# ==========================================================
-# 📂 FILE HANDLING / EXCEL / PDF
-# ==========================================================
-PyMuPDF==1.24.10
-pdfplumber==0.11.3
-Pillow==10.4.0
-xlsxwriter==3.2.0
-openpyxl==3.1.5
-aiofiles==24.1.0
-python-multipart==0.0.9
-requests==2.32.3
+# --- File Handling ---
+PyMuPDF
+pdfplumber
+Pillow
+xlsxwriter
+openpyxl
+aiofiles
+python-multipart
+requests
 
-# ==========================================================
-# 🔍 OCR / IMAGE RECOGNITION (Full stack)
-# ==========================================================
-opencv-python-headless==4.10.0.84
+# --- Light OCR Option (Fallback) ---
+opencv-python-headless
 pytesseract==0.3.13
 pdf2image==1.17.0
-poppler-utils
-tesseract-ocr
-tesseract-ocr-spa  # Spanish OCR language support
+Pillow==10.4.0
 
-# ==========================================================
-# 🧮 DATA PROCESSING / MATCHING
-# ==========================================================
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.25.1
+# --- Data Processing / Matching ---
+fuzzywuzzy
+python-Levenshtein
 
-# ==========================================================
-# ⚙️ BACKEND / API AUTOMATION
-# ==========================================================
-fastapi==0.115.0
-uvicorn==0.30.3
+# --- FastAPI Backend (for automation endpoints) ---
+fastapi
+uvicorn
 
-# ==========================================================
-# 📊 VISUALIZATION
-# ==========================================================
-matplotlib==3.9.2
+# --- Visualization ---
+matplotlib
 
-# ==========================================================
-# 🧰 UTILITIES
-# ==========================================================
-tqdm==4.66.5
+# --- Utilities ---
+tqdm
