--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ opencv-python-headless
 pytesseract==0.3.13
 pdf2image==1.17.0
 Pillow==10.4.0
+easyocr
 
 # --- Data Processing / Matching ---
 fuzzywuzzy
