--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ numpy
 fastapi
 uvicorn
 pdfplumber==0.11.3
+pdf2image==1.17.0
+Pillow==10.4.0
+easyocr==1.7.1
+torch==2.4.0
+torchvision==0.19.0
 
 # --- OpenAI + Environment ---
 openai
