--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ numpy
 streamlit-plotly-events
 pytesseract
 
-
+poppler-utils
+tesseract-ocr
+tesseract-ocr-spa
+tesseract-ocr-ell
+tesseract-ocr-eng
 
 # --- OCR Engine (Spanish + Greek + English) ---
 easyocr
