--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-
+GLPI_URL =https://saniikos.private.glpi-network.cloud/apirest.php
 APP_TOKEN =gwaCJGGWVEtxe7iiJ5SuV6Wc2ubdarhGYgNCkAzS
 USER_TOKEN =tBg4kMUhDOkiWcELi0zTjovD0kp9Pur9uyyk8ov7
