--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ torch
 openai 
 gtts 
 SpeechRecognition
-streamlit-audio-recorder
+st-audio-recorder
 
 # --- OCR Engine (Spanish + Greek + English) ---
 easyocr
